workspace/checkpoint/different_knobs_subset_10/lr_0.2/lr_decay/JT_10b/err_0.txt
  File "code/train.py", line 108
    from models.jt_q_three_layer as jt_quant 
                                 ^
SyntaxError: invalid syntax
  File "code/train.py", line 108
    from models.jt_q_three_layer import as jt_quant 
                                        ^
SyntaxError: invalid syntax
Fatal Python error: init_import_size: Failed to import the site module
Python runtime state: initialized
Traceback (most recent call last):
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/site.py", line 580, in <module>
    main()
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/site.py", line 566, in main
    known_paths = addusersitepackages(known_paths)
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/site.py", line 316, in addusersitepackages
    addsitedir(user_site, known_paths)
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/site.py", line 208, in addsitedir
    addpackage(sitedir, name, known_paths)
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/site.py", line 169, in addpackage
    exec(line)
  File "<string>", line 1, in <module>
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/importlib/util.py", line 14, in <module>
    from contextlib import contextmanager
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/contextlib.py", line 97, in <module>
    class _GeneratorContextManager(_GeneratorContextManagerBase,
  File "/home/bhawks/.conda/envs/loss_landscape/lib/python3.8/abc.py", line 85, in __new__
    cls = super().__new__(mcls, name, bases, namespace, **kwargs)
KeyboardInterrupt
Traceback (most recent call last):
  File "code/train.py", line 11, in <module>
    from arguments import get_parser
  File "/home/bhawks/loss_landscape/loss_landscape_taxonomy/workspace/src_jet/code/arguments.py", line 59
    parser.add_argument("--batch-norm", action="store_true", dest='batch-norm' help="Implement with batch normalization.")
                                                                               ^
SyntaxError: invalid syntax
